# fastats

./: .appveyor.yml  .coveragerc  .gitignore  .travis.yml  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  conftest.py  pyproject.toml  pytest.ini  releases.md  requirements-dev.txt  requirements.txt  roadmap.md  setup.py  todo.md  tox.ini
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: main-ci.yml
docs/: Makefile  glossary.rst  make.bat  one_page_overview.rst
docs/source/: conf.py  index.rst  single_page_run_through.rst
fastats/: __init__.py  _version.py
fastats/basic/: __init__.py  simple.py
fastats/context/: __init__.py  auto_inject.py  inject.py  no_fast.py
fastats/core/: decorator.py  single_pass.py  windowed_pass.py  windowed_stateful_pass.py
fastats/linear_algebra/: __init__.py  det.py  inv.py  lasso.py  lu.py  matrix_minor.py  ols.py  pca.py  pinv.py  qr.py
fastats/maths/: __init__.py  activations.py  beta_pdf.py  clip.py  deriv.py  erf.py  erfc.py  ewma.py  gamma.py  logistic.py  norm_cdf.py  norm_pdf.py  ols.py  pre_processing.py  sum_sq_dev.py  t_pdf.py
fastats/scaling/: __init__.py  scaling.py
fastats/testing/: decorators.py
fastats/utilities/: __init__.py  arrays.py  pre_processing.py
tests/: __init__.py  test_name_error_addition.py  test_name_error_minimal.py  test_name_error_multi.py  test_name_error_nested.py  test_name_error_newton.py  test_numba_parallel_issues.py
tests/basic/: test_simple.py
tests/core/: test_decorator.py  test_single_pass.py  test_windowed_pass.py  test_windowed_stateful_pass.py
tests/data/: datasets.py
tests/linear_algebra/: test_det.py  test_inv.py  test_lasso.py  test_lu.py  test_matrix_minor.py  test_ols_sklearn_diabetes.py  test_pca.py  test_pinv.py  test_qr.py
tests/maths/: test_activations.py  test_beta_pdf.py  test_clip.py  test_erf.py  (+10 more)
(+36 files in other folders)
