[tool.poetry]
name = "fastats"
version = "2022.1"
description = "Benchmarked, scalable numerics based on linear algebra"
authors = ["Dave Willmer <dave.willmer@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/fastats/fastats"
exclude = ["*.ipynb"]

[tool.poetry.dependencies]
python = "^3.8,<3.11"
numpy = "^1.21.0"
numba = "^0.55.0"
scipy = "^1.8,<1.9"

[tool.poetry.group.dev.dependencies]
scikit-learn = "^1.2.0"
pandas = "^1.4.4"
hypothesis = "^6.61.0"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
statsmodels = "^0.13.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "fastats"
author_email = "fastats@googlegroups.com"
url = "https://github.com/fastats/fastats"
classifiers = [
    "Development Status :: 5 - Production/Stable",

    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",

    "Topic :: Scientific/Engineering",

    "Operating System :: OS Independent",

    "License :: OSI Approved :: MIT License",

    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
]
keywords = "algorithmics ast linear-algebra numba numerics"

[tool.pytest.ini_options]
addopts = "--doctest-modules --doctest-glob='docs/source/*.rst' --cov . --cov-report term-missing --durations=10"
testpaths = "fastats tests docs"
doctest_optionflags = "NORMALIZE_WHITESPACE"

[tool.coverage.run]
branch = true
omit = ["setup.py", "venv*"]

[tool.coverage.report]
fail_under = 99
skip_covered = true
exclude_lines = [
    "if __name__ == .__main__.:",
    "if self._debug:",
    "pragma: no cover",
]